@@ -18,6 +18,9 @@ Breaking Changes
 Fixes
 =====
 
+ - Fixed an issue which resulted in an exception when using the same global
+   aggregation symbol twice as a select item on a join query.
+
  - Fixed an issue that caused wrong results to be returned for global
    aggregation on ``JOINS`` when literal expression in ``WHERE`` clause is
    evaluated to false. E.g.::
